[package]
name = "telegram-manage-bot"
version = "0.1.0"
edition = "2021"


[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5.0"
chrono = {version = "0.4.24",features = ["serde"]}
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "mysql","chrono" ] }
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
once_cell = "1.17.1"
rand = "0.8.5"
serde = {version = "1.0.163",features = ["derive"]}
serde_json = "1.0.96"
toml = "0.7.4"